--- a/notebooks-not-done/FIX_posts_influencer_performance.ipynb
+++ b/notebooks-not-done/FIX_posts_influencer_performance.ipynb
@@ -2,27 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "431e901f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to C:\\Users\\Surface/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt_tab to\n",
-      "[nltk_data]     C:\\Users\\Surface/nltk_data...\n",
-      "[nltk_data]   Package punkt_tab is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\Surface/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "C:\\Users\\Surface\\AppData\\Local\\Temp\\ipykernel_19632\\2420426634.py:31: DtypeWarning: Columns (12,34) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(\"../data/comments_post.csv\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import re\n",
@@ -38,54 +21,26 @@
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "import ipywidgets as widgets\n",
-    "from IPython.display import display, clear_output\n",
-    "from transformers import pipeline\n",
-    "\n",
-    "\n",
-    "# Download NLTK Ressourcen\n",
-    "nltk.download(\"punkt\")\n",
-    "nltk.download('punkt_tab')\n",
-    "nltk.download(\"stopwords\")\n",
-    "\n",
-    "# Set matplotlib to use English for dates\n",
-    "try:\n",
-    "    locale.setlocale(locale.LC_TIME, 'en_US.UTF-8')\n",
-    "except locale.Error:\n",
-    "    locale.setlocale(locale.LC_TIME, 'C')\n",
-    "\n",
-    "# Load and prepare data\n",
-    "df = pd.read_csv(\"../data/comments_post.csv\")\n",
-    "\n",
-    "# Basic cleaning\n",
-    "df = df[df[\"text_comment\"].notna() & (df[\"playCount\"] > 0)].copy()\n",
-    "df[\"text_comment\"] = df[\"text_comment\"].astype(str).str.lower()\n",
-    "\n",
-    "# Parse datetime and remove timezone (tz-naive)\n",
-    "df[\"createTimeISO\"] = pd.to_datetime(df[\"createTimeISO\"]).dt.tz_localize(None)\n",
-    "\n",
-    "# Add week column\n",
-    "df[\"week\"] = df[\"createTimeISO\"].dt.to_period(\"W\").dt.start_time"
+    "from IPython.display import display, clear_output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "dd82902a",
+   "execution_count": null,
+   "id": "67661e1d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define standard and custom stopwords\n",
-    "standard_stopwords = set(stopwords.words(\"german\")) | set(stopwords.words(\"english\"))\n",
-    "custom_stopwords = {\n",
-    "    \"i\", \"you\", \"it\", \"me\", \"this\", \"that\", \"we\", \"she\", \"he\", \"they\", \"u\", \"ur\",\n",
-    "    \"my\", \"your\", \"yours\", \"ours\", \"their\", \"its\", \"use\", \"like\", \"get\", \"need\", \n",
-    "    \"please\", \"one\", \"would\", \"watch\", \"want\", \"que\", \"tbh\", \"idk\", \"fr\", \n",
-    "    \"literally\", \"actually\", \"honestly\", \"kinda\", \"thing\", \"stuff\", \"good\", \"bad\", \n",
-    "    \"😭\", \"😂\", \"✨\", \"💀\", \"💅\", \"🥰\", \"😩\", \"😅\", \"🥺\", \"😳\"\n",
-    "}\n",
+    "# Load and prepare data\n",
+    "df = pd.read_csv(\"../data/raw_data/posts_transcripts_raw.csv\")\n",
     "\n",
-    "# Unigram-specific stopwords (standard + custom)\n",
-    "combined_stopwords = standard_stopwords | custom_stopwords"
+    "# Remove posts with less than views\n",
+    "df = df[df[\"playCount\"] > 50].copy()\n",
+    "\n",
+    "df[\"createTimeISO\"] = pd.to_datetime(df[\"createTimeISO\"]).dt.tz_localize(None)\n",
+    "\n",
+    "# Add week column\n",
+    "df[\"week\"] = df[\"createTimeISO\"].dt.to_period(\"W\").dt.start_time"
    ]
   },
   {
@@ -98,30 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "216a9231",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d98bfcd28b04f81ba85c9875664fa29",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(DatePicker(value=datetime.date(2024, 9, 30), description='Start Date', step=1), DatePick…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate engagement\n",
     "df[\"engagement\"] = df[\"diggCount\"] + df[\"commentCount\"] + df[\"shareCount\"]\n",
     "\n",
-    "# Set up interactive widgets (standardized date range 6 months)\n",
+    "# Set up interactive widgets (standardized date range: 6 months)\n",
     "max_date = df[\"createTimeISO\"].max().date()\n",
     "six_months_ago = max_date - timedelta(days=180)\n",
     "\n",
@@ -132,27 +72,36 @@
     "# Define interactive update function\n",
     "def update_plot(start, end, min_posts):\n",
     "    if start is None or end is None:\n",
-    "        print(\"Please select both start and end date.\")\n",
+    "        print(\"Please select both start and end dates.\")\n",
     "        return\n",
     "\n",
     "    start = pd.to_datetime(start)\n",
     "    end = pd.to_datetime(end)\n",
     "\n",
+    "    if start > end:\n",
+    "        print(\"Start date must be before end date.\")\n",
+    "        return\n",
+    "\n",
     "    # Filter data by date range\n",
     "    mask = (df[\"createTimeISO\"] >= start) & (df[\"createTimeISO\"] <= end)\n",
-    "    filtered_df = df[mask].copy()\n",
+    "    filtered_df = df.loc[mask].copy()\n",
     "\n",
     "    if filtered_df.empty:\n",
-    "        print(\"No data available for selected date range.\")\n",
+    "        print(\"No data available for the selected date range.\")\n",
     "        return\n",
     "\n",
     "    # Group by influencer\n",
-    "    grouped = filtered_df.groupby(\"author_nickName\").agg({\n",
-    "        \"engagement\": \"sum\",\n",
-    "        \"playCount\": \"sum\",\n",
-    "        \"author_fans\": \"first\",\n",
-    "        \"id\": \"count\"\n",
-    "    }).rename(columns={\"id\": \"num_posts\"}).reset_index()\n",
+    "    grouped = (\n",
+    "        filtered_df.groupby(\"author_nickName\")\n",
+    "        .agg({\n",
+    "            \"engagement\": \"sum\",\n",
+    "            \"playCount\": \"sum\",\n",
+    "            \"author_fans\": \"first\",\n",
+    "            \"id\": \"count\"\n",
+    "        })\n",
+    "        .rename(columns={\"id\": \"num_posts\"})\n",
+    "        .reset_index()\n",
+    "    )\n",
     "\n",
     "    # Filter by minimum number of posts\n",
     "    grouped = grouped[grouped[\"num_posts\"] >= min_posts]\n",
@@ -175,7 +124,7 @@
     "    plt.show()\n",
     "\n",
     "# Display interactive widgets\n",
-    "widgets.interact(update_plot, start=start_date, end=end_date, min_posts=min_posts_slider);"
+    "widgets.interact(update_plot, start=start_date, end=end_date, min_posts=min_posts_slider);\n"
    ]
   },
   {
@@ -188,23 +137,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "502d5dc8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Surface\\AppData\\Local\\Temp\\ipykernel_19632\\3602684941.py:26: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  filtered_comments_df[\"speed_count\"] = filtered_comments_df[\"text_comment_clean\"].str.count(r\"\\bspeed\\b\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Ensure all necessary columns are included from the start\n",
     "comments_df = df[df[\"text_comment\"].notna()][[\"text_comment\", \"author_nickName\", \"createTimeISO\"]].copy()\n",
@@ -248,39 +184,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c27d3045",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4da29e92a48408db735a4f412d22aa8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Text(value='', description='Influencer:', placeholder='Enter name, e.g. amyflamy'), DatePicker(…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62dc1dd084be4a9b800834b12c66ef82",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Text input for influencer name\n",
     "influencer_input = widgets.Text(\n",
@@ -353,60 +260,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "82be7c1d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Top 20 Bigrams:\n",
-      "korean skincare - 11\n",
-      "without makeup - 9\n",
-      "cleansing oil - 7\n",
-      "song kang - 6\n",
-      "skin care - 5\n",
-      "take care - 5\n",
-      "skincare routine - 4\n",
-      "beautiful without - 4\n",
-      "dry skin - 4\n",
-      "white fungus - 4\n",
-      "hair routine - 3\n",
-      "much better - 3\n",
-      "love videos - 3\n",
-      "amy pretty - 3\n",
-      "got girl - 3\n",
-      "relief cream - 3\n",
-      "anyone grwm - 3\n",
-      "oily skin - 3\n",
-      "skincare products - 3\n",
-      "clear skin - 3\n",
-      "\n",
-      "Top 20 Trigrams:\n",
-      "beautiful without makeup - 4\n",
-      "hair perfume oil - 3\n",
-      "winter shade summer - 2\n",
-      "korean skincare really - 2\n",
-      "love korean skincare - 2\n",
-      "vaseline clog pores - 2\n",
-      "content creator easy - 2\n",
-      "creator easy job - 2\n",
-      "oil instead cleansing - 2\n",
-      "instead cleansing oil - 2\n",
-      "love white fungus - 2\n",
-      "white fungus mushrooms - 2\n",
-      "cant believe got - 1\n",
-      "believe got meet - 1\n",
-      "got meet heize - 1\n",
-      "meet heize see - 1\n",
-      "heize see cried - 1\n",
-      "see cried girl - 1\n",
-      "cried girl hair - 1\n",
-      "girl hair routine - 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Choose influencer\n",
     "influencer_name = \"amyflamy\"\n",
@@ -444,7 +301,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "skincare-analysis-6rggZTBS-py3.10",
+   "display_name": "skincare-analysis-pFfgqJ8c-py3.10",
    "language": "python",
    "name": "python3"
   },
@@ -458,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
