--- a/notebooks/common_words_caption.ipynb
+++ b/notebooks/common_words_caption.ipynb
@@ -2,28 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "169fccb6",
+   "execution_count": null,
+   "id": "365b3013",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package punkt to C:\\Users\\Surface/nltk_data...\n",
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     /Users/hannahschlaucher/nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
       "[nltk_data] Downloading package punkt_tab to\n",
-      "[nltk_data]     C:\\Users\\Surface/nltk_data...\n",
+      "[nltk_data]     /Users/hannahschlaucher/nltk_data...\n",
       "[nltk_data]   Package punkt_tab is already up-to-date!\n",
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\Surface/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "C:\\Users\\Surface\\AppData\\Local\\Temp\\ipykernel_14028\\1899051416.py:27: UserWarning: Converting to PeriodArray/Index representation will drop timezone information.\n",
-      "  df[\"week\"] = df[\"createTimeISO\"].dt.to_period(\"W\").dt.start_time\n"
+      "[nltk_data]     /Users/hannahschlaucher/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Import libaries\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import nltk\n",
@@ -41,13 +51,47 @@
     "# Download NLTK Ressourcen\n",
     "nltk.download(\"punkt\")\n",
     "nltk.download('punkt_tab')\n",
-    "nltk.download(\"stopwords\")\n",
-    "\n",
+    "nltk.download(\"stopwords\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "169fccb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/rx/4hst61c96_bfm0gnxrq_5w_h0000gn/T/ipykernel_22636/37378870.py:2: DtypeWarning: Columns (0,4,7,15,18) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(\"../data/raw_data/comments_posts_transcripts_raw.csv\")\n"
+     ]
+    }
+   ],
+   "source": [
     "# Load dataset\n",
-    "df = pd.read_csv(\"../data/posts_hashtags_selected_columns.csv\")\n",
-    "\n",
+    "df = pd.read_csv(\"../data/raw_data/comments_posts_transcripts_raw.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2974fe96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/rx/4hst61c96_bfm0gnxrq_5w_h0000gn/T/ipykernel_22636/2942290369.py:5: UserWarning: Converting to PeriodArray/Index representation will drop timezone information.\n",
+      "  df[\"week\"] = df[\"createTimeISO\"].dt.to_period(\"W\").dt.start_time\n"
+     ]
+    }
+   ],
+   "source": [
     "# Convert timestamp column to datetime\n",
-    "df[\"createTimeISO\"] = pd.to_datetime(df[\"createTimeISO\"])\n",
+    "df[\"createTimeISO\"] = pd.to_datetime(df[\"createTimeISO\"], errors='coerce')\n",
     "\n",
     "# Add week column\n",
     "df[\"week\"] = df[\"createTimeISO\"].dt.to_period(\"W\").dt.start_time\n",
@@ -85,7 +129,7 @@
     "    return tokens\n",
     "\n",
     "# Apply tokenization to all captions\n",
-    "df[\"tokens\"] = df[\"text\"].apply(clean_tokens)\n"
+    "df[\"tokens\"] = df[\"text\"].apply(clean_tokens)"
    ]
   },
   {
@@ -93,31 +137,49 @@
    "id": "5988588a",
    "metadata": {},
    "source": [
-    "Top 5 most common words per week"
+    "**Top 5 most common words per week**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "bb557c26",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Columns must be same length as key",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[34], line 20\u001b[0m\n\u001b[0;32m     17\u001b[0m df_topwords \u001b[38;5;241m=\u001b[39m df_topwords\u001b[38;5;241m.\u001b[39mexplode(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtop_words\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Split the tuples into separate 'word' and 'count' columns\u001b[39;00m\n\u001b[1;32m---> 20\u001b[0m \u001b[43mdf_topwords\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mword\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcount\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(df_topwords[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtop_words\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mtolist(), index\u001b[38;5;241m=\u001b[39mdf_topwords\u001b[38;5;241m.\u001b[39mindex)\n\u001b[0;32m     22\u001b[0m \u001b[38;5;66;03m# Check for any NaN values and drop them\u001b[39;00m\n\u001b[0;32m     23\u001b[0m df_topwords \u001b[38;5;241m=\u001b[39m df_topwords\u001b[38;5;241m.\u001b[39mdropna(subset\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mword\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcount\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
-      "File \u001b[1;32mc:\\Users\\Surface\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\skincare-analysis-6rggZTBS-py3.10\\lib\\site-packages\\pandas\\core\\frame.py:4299\u001b[0m, in \u001b[0;36mDataFrame.__setitem__\u001b[1;34m(self, key, value)\u001b[0m\n\u001b[0;32m   4297\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_setitem_frame(key, value)\n\u001b[0;32m   4298\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, (Series, np\u001b[38;5;241m.\u001b[39mndarray, \u001b[38;5;28mlist\u001b[39m, Index)):\n\u001b[1;32m-> 4299\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_setitem_array\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   4300\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(value, DataFrame):\n\u001b[0;32m   4301\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_set_item_frame_value(key, value)\n",
-      "File \u001b[1;32mc:\\Users\\Surface\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\skincare-analysis-6rggZTBS-py3.10\\lib\\site-packages\\pandas\\core\\frame.py:4341\u001b[0m, in \u001b[0;36mDataFrame._setitem_array\u001b[1;34m(self, key, value)\u001b[0m\n\u001b[0;32m   4336\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   4337\u001b[0m     \u001b[38;5;66;03m# Note: unlike self.iloc[:, indexer] = value, this will\u001b[39;00m\n\u001b[0;32m   4338\u001b[0m     \u001b[38;5;66;03m#  never try to overwrite values inplace\u001b[39;00m\n\u001b[0;32m   4340\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(value, DataFrame):\n\u001b[1;32m-> 4341\u001b[0m         \u001b[43mcheck_key_length\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   4342\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m k1, k2 \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(key, value\u001b[38;5;241m.\u001b[39mcolumns):\n\u001b[0;32m   4343\u001b[0m             \u001b[38;5;28mself\u001b[39m[k1] \u001b[38;5;241m=\u001b[39m value[k2]\n",
-      "File \u001b[1;32mc:\\Users\\Surface\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\skincare-analysis-6rggZTBS-py3.10\\lib\\site-packages\\pandas\\core\\indexers\\utils.py:390\u001b[0m, in \u001b[0;36mcheck_key_length\u001b[1;34m(columns, key, value)\u001b[0m\n\u001b[0;32m    388\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m columns\u001b[38;5;241m.\u001b[39mis_unique:\n\u001b[0;32m    389\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(value\u001b[38;5;241m.\u001b[39mcolumns) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(key):\n\u001b[1;32m--> 390\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mColumns must be same length as key\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    391\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    392\u001b[0m     \u001b[38;5;66;03m# Missing keys in columns are represented as -1\u001b[39;00m\n\u001b[0;32m    393\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(columns\u001b[38;5;241m.\u001b[39mget_indexer_non_unique(key)[\u001b[38;5;241m0\u001b[39m]) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(value\u001b[38;5;241m.\u001b[39mcolumns):\n",
-      "\u001b[1;31mValueError\u001b[0m: Columns must be same length as key"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Explode list of tokens to count word frequency per week\n",
+    "df_exploded = df.explode(\"tokens\").dropna(subset=[\"tokens\"])\n",
+    "\n",
+    "# Calculate top 5 words per week\n",
+    "weekly_words = (\n",
+    "    df_exploded.groupby(\"week\")[\"tokens\"]\n",
+    "    .apply(lambda x: Counter(x).most_common(5))  # Get top 5 words per week\n",
+    ")\n",
+    "\n",
+    "# Reset index to turn week into a column\n",
+    "df_topwords = weekly_words.reset_index()\n",
+    "\n",
+    "# Rename for clarity\n",
+    "df_topwords.columns = [\"week\", \"top_words\"]\n",
+    "\n",
+    "# Explode list of tuples (word, count)\n",
+    "df_topwords = df_topwords.explode(\"top_words\")\n",
+    "\n",
+    "# Split the tuples into separate 'word' and 'count' columns\n",
+    "df_topwords[[\"word\", \"count\"]] = pd.DataFrame(df_topwords[\"top_words\"].tolist(), index=df_topwords.index)\n",
+    "\n",
+    "# Check for any NaN values and drop them\n",
+    "df_topwords = df_topwords.dropna(subset=[\"word\", \"count\"])\n",
+    "\n",
+    "# Add rank for each word per week\n",
+    "df_topwords[\"rank\"] = df_topwords.groupby(\"week\").cumcount() + 1\n",
+    "\n",
+    "# Final tidy table\n",
+    "df_topwords = df_topwords[[\"week\", \"rank\", \"word\", \"count\"]]\n",
+    "\n",
+    "# Sort by newest week\n",
+    "df_topwords = df_topwords.sort_values(\"week\", ascending=False)\n",
+    "\n",
     "# Explode list of tokens to count word frequency per week\n",
     "df_exploded = df.explode(\"tokens\").dropna(subset=[\"tokens\"])\n",
     "\n",
@@ -160,7 +222,7 @@
    "id": "c867f4ec",
    "metadata": {},
    "source": [
-    "Most common words and phrases"
+    "**Most common words and phrases**"
    ]
   },
   {
@@ -872,7 +934,7 @@
    "id": "c4fed7e0",
    "metadata": {},
    "source": [
-    "Wordcloud of most common words for last 6 months"
+    "**Wordcloud of most common words for last 6 months**"
    ]
   },
   {
@@ -1011,7 +1073,7 @@
    "id": "e09c6dfe",
    "metadata": {},
    "source": [
-    "Top keyword trends per week (last 6 monts)"
+    "**Top keyword trends per week (last 6 monts)**"
    ]
   },
   {
@@ -2050,42 +2112,42 @@
     }
    ],
    "source": [
-    "# Step 1: Create 'week' column from timestamp\n",
+    "# Create 'week' column from timestamp\n",
     "df[\"week\"] = df[\"createTimeISO\"].dt.to_period(\"W\").dt.start_time\n",
     "\n",
-    "# Step 2: Explode token list into one word per row\n",
+    "# Explode token list into one word per row\n",
     "df_weekly = df.explode(\"tokens\")\n",
     "\n",
-    "# Step 3: Count how often each word appears per week\n",
+    "# Count how often each word appears per week\n",
     "word_counts = df_weekly.groupby([\"week\", \"tokens\"]).size().reset_index(name=\"count\")\n",
     "\n",
-    "# Step 4: Optional - keep only words that occur more than 20 times overall\n",
+    "# Optional - keep only words that occur more than 20 times overall\n",
     "top_words = word_counts.groupby(\"tokens\")[\"count\"].sum()\n",
     "top_words = top_words[top_words > 20].index  # adjust threshold if needed\n",
     "\n",
-    "# Step 5: Filter word_counts to keep only top words\n",
+    "# Filter word_counts to keep only top words\n",
     "filtered = word_counts[word_counts[\"tokens\"].isin(top_words)]\n",
     "\n",
-    "# Step 6: Create pivot table (words as rows, weeks as columns)\n",
+    "# Create pivot table (words as rows, weeks as columns)\n",
     "pivot_weekly = filtered.pivot_table(\n",
     "    index=\"tokens\", columns=\"week\", values=\"count\", fill_value=0\n",
     ")\n",
     "\n",
-    "# Step 7: Sort by total mentions across all weeks (optional)\n",
+    "# Sort by total mentions across all weeks (optional)\n",
     "pivot_weekly[\"total\"] = pivot_weekly.sum(axis=1)\n",
     "pivot_weekly = pivot_weekly.sort_values(\"total\", ascending=False).drop(columns=\"total\")\n",
     "\n",
-    "# Step 8: Count number of posts per week (not exploded)\n",
+    "# Count number of posts per week (not exploded)\n",
     "weekly_post_counts = df.groupby(\"week\").size()\n",
     "\n",
-    "# Step 9: Convert to DataFrame row and label it\n",
+    "# Convert to DataFrame row and label it\n",
     "weekly_post_counts = pd.DataFrame([weekly_post_counts])\n",
     "weekly_post_counts.index = [\"total_posts\"]\n",
     "\n",
-    "# Step 10: Combine with pivot table (add total_posts as first row)\n",
+    "# Combine with pivot table (add total_posts as first row)\n",
     "pivot_with_totals = pd.concat([weekly_post_counts, pivot_weekly])\n",
     "\n",
-    "# Step 11: Display top 15 words (+ total_posts)\n",
+    "# Display top 15 words (+ total_posts)\n",
     "pivot_with_totals.head(16)"
    ]
   },
@@ -2094,7 +2156,7 @@
    "id": "fb001a55",
    "metadata": {},
    "source": [
-    "Top keywords over time"
+    "**Top over time**"
    ]
   },
   {
@@ -2159,7 +2221,7 @@
    "id": "417743ea",
    "metadata": {},
    "source": [
-    "Top trending keywords - 4 weeks growth"
+    "**Top keywords - 4 weeks growth**"
    ]
   },
   {
@@ -2213,7 +2275,7 @@
    "id": "087cd38b",
    "metadata": {},
    "source": [
-    "Trending words over time"
+    "**Words over time**"
    ]
   },
   {
@@ -2279,74 +2341,7 @@
    "id": "c90742c3",
    "metadata": {},
    "source": [
-    "Most common chunks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6514e328",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#import spacy\n",
-    "#from langdetect import detect, DetectorFactory\n",
-    "#from collections import Counter\n",
-    "#import re\n",
-    "\n",
-    "# Fix randomness in language detection\n",
-    "#DetectorFactory.seed = 0\n",
-    "\n",
-    "# Load spacy models\n",
-    "#nlp_de = spacy.load(\"de_core_news_sm\")\n",
-    "#nlp_en = spacy.load(\"en_core_web_sm\")\n",
-    "\n",
-    "# Emoji regex pattern\n",
-    "#emoji_pattern = re.compile(\"[\\U00010000-\\U0010ffff]\", flags=re.UNICODE)\n",
-    "\n",
-    "# Function: check for emojis\n",
-    "#def contains_emoji(text):\n",
-    " #   return bool(emoji_pattern.search(text))\n",
-    "\n",
-    "# Function: detect valid language\n",
-    "#def is_valid_language(text):\n",
-    " #   try:\n",
-    "  #      lang = detect(text)\n",
-    "   #     return lang in [\"en\", \"de\"]\n",
-    "    #except:\n",
-    "     #   return False\n",
-    "\n",
-    "# Function: extract and clean chunks\n",
-    "#def extract_clean_chunks(text, stopwords):\n",
-    " #   if not is_valid_language(text):\n",
-    "  #      return []\n",
-    "\n",
-    "    # Choose model by presence of German umlauts\n",
-    "  #  nlp = nlp_de if any(umlaut in text for umlaut in \"äöüß\") else nlp_en\n",
-    "  #  doc = nlp(text)\n",
-    "  #  chunks = []\n",
-    "  #  for chunk in doc.noun_chunks:\n",
-    "  #      phrase = chunk.text.lower().strip()\n",
-    "   #     if len(phrase.split()) <= 1:\n",
-    "    #        continue  # only multi-word chunks\n",
-    "     #   if any(word in stopwords for word in phrase.split()):\n",
-    "      #      continue  # skip if any word is a stopword\n",
-    "       # if contains_emoji(phrase):\n",
-    "        #    continue  # skip emoji chunks\n",
-    "        #chunks.append(phrase)\n",
-    "    #return chunks\n",
-    "\n",
-    "# Run chunk analysis\n",
-    "#all_chunks = []\n",
-    "#for text in df[\"text\"].dropna():\n",
-    "#    chunks = extract_clean_chunks(text, combined_stopwords)\n",
-    "#    all_chunks.extend(chunks)\n",
-    "\n",
-    "# Count and show top 20\n",
-    "#chunk_counter = Counter(all_chunks)\n",
-    "#print(\"\\nTop 20 Chunks:\")\n",
-    "#for phrase, count in chunk_counter.most_common(20):\n",
-    "#    print(f\"{phrase}: {count}\")\n"
+    "**Most common chunks**"
    ]
   },
   {
@@ -2360,7 +2355,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "skincare-analysis-6rggZTBS-py3.10",
+   "display_name": "skincare-analysis-pFfgqJ8c-py3.10",
    "language": "python",
    "name": "python3"
   },
@@ -2374,7 +2369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
