Stuff from successfull post and checking if streamlit works

--- a/notebooks/influencer_performance.ipynb
+++ b/notebooks/influencer_performance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "431e901f",
    "metadata": {},
    "outputs": [],
@@ -26,13 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "67661e1d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load and prepare data\n",
-    "df = pd.read_csv(\"../data/raw_data/posts_transcripts_raw.csv\")\n",
+    "df = pd.read_csv(\"../data/filtered_data/comments_posts_transcripts.csv\")\n",
     "\n",
     "# Remove posts with less than views\n",
     "df = df[df[\"playCount\"] > 50].copy()\n",
@@ -53,10 +53,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "216a9231",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f40fb8eda03b400f8c35f1185a87ec31",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(DatePicker(value=datetime.date(2025, 1, 9), description='Start Date', step=1), DatePicke…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Calculate engagement\n",
     "df[\"engagement\"] = df[\"diggCount\"] + df[\"commentCount\"] + df[\"shareCount\"]\n",
@@ -97,9 +112,9 @@
     "            \"engagement\": \"sum\",\n",
     "            \"playCount\": \"sum\",\n",
     "            \"author_fans\": \"first\",\n",
-    "            \"id\": \"count\"\n",
+    "            \"post_id\": \"count\"\n",
     "        })\n",
-    "        .rename(columns={\"id\": \"num_posts\"})\n",
+    "        .rename(columns={\"post_id\": \"num_posts\"})\n",
     "        .reset_index()\n",
     "    )\n",
     "\n",
@@ -137,19 +152,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "502d5dc8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/5k/b8_r8jw502n4zztm42zd76m80000gn/T/ipykernel_27775/4199171522.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  filtered_comments_df[\"speed_count\"] = filtered_comments_df[\"comment_clean\"].str.count(r\"\\bspeed\\b\")\n"
+     ]
+    }
+   ],
    "source": [
     "# Ensure all necessary columns are included from the start\n",
-    "comments_df = df[df[\"text_comment\"].notna()][[\"text_comment\", \"author_nickName\", \"createTimeISO\"]].copy()\n",
+    "comments_df = df[df[\"comment\"].notna()][[\"comment\", \"author_nickName\", \"createTimeISO\"]].copy()\n",
     "\n",
     "# Basic text cleaning: lowercase and strip whitespace\n",
-    "comments_df[\"text_comment_clean\"] = comments_df[\"text_comment\"].str.strip().str.lower()\n",
+    "comments_df[\"comment_clean\"] = comments_df[\"comment\"].str.strip().str.lower()\n",
     "\n",
     "# Remove exact duplicate comments\n",
-    "comments_df = comments_df.drop_duplicates(subset=[\"text_comment_clean\"])\n",
+    "comments_df = comments_df.drop_duplicates(subset=[\"comment_clean\"])\n",
     "\n",
     "# Define known spam/meme phrases to filter out\n",
     "spam_phrases = [\n",
@@ -164,10 +192,10 @@
     "spam_pattern = \"|\".join(re.escape(p) for p in spam_phrases)\n",
     "\n",
     "# Exclude comments that match any of the spam patterns\n",
-    "filtered_comments_df = comments_df[~comments_df[\"text_comment_clean\"].str.contains(spam_pattern)]\n",
+    "filtered_comments_df = comments_df[~comments_df[\"comment_clean\"].str.contains(spam_pattern)]\n",
     "\n",
     "# Optionally: filter out comments that contain 'speed' more than once\n",
-    "filtered_comments_df[\"speed_count\"] = filtered_comments_df[\"text_comment_clean\"].str.count(r\"\\bspeed\\b\")\n",
+    "filtered_comments_df[\"speed_count\"] = filtered_comments_df[\"comment_clean\"].str.count(r\"\\bspeed\\b\")\n",
     "filtered_comments_df = filtered_comments_df[filtered_comments_df[\"speed_count\"] <= 1]\n",
     "\n",
     "# Clean up: remove the helper column\n",
@@ -184,10 +212,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c27d3045",
+   "execution_count": 44,
+   "id": "c3004de0",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Define standard and custom stopwords\n",
+    "standard_stopwords = set(stopwords.words(\"german\")) | set(stopwords.words(\"english\"))\n",
+    "\n",
+    "\n",
+    "# Unigram-specific stopwords (standard + custom)\n",
+    "combined_stopwords = standard_stopwords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "c27d3045",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f9aa6cba406f420fb3979d9b478800ed",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Text(value='', description='Influencer:', placeholder='Enter name, e.g. amyflamy'), DatePicker(…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eb681e00f9cc4fa1b915f9eb1e57f1aa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Text input for influencer name\n",
     "influencer_input = widgets.Text(\n",
@@ -206,7 +278,7 @@
     "    clear_output(wait=True)\n",
     "\n",
     "    if not influencer or start is None or end is None:\n",
-    "        print(\"Please enter an influencer name and valid dates.\")\n",
+    "        print(\"Please enter an influencer name and valpostpost_id dates.\")\n",
     "        return\n",
     "\n",
     "    # Filter comments\n",
@@ -224,7 +296,7 @@
     "        return\n",
     "\n",
     "    # Tokenize and clean\n",
-    "    all_text = \" \".join(df_filtered[\"text_comment\"].dropna())\n",
+    "    all_text = \" \".join(df_filtered[\"comment\"].dropna())\n",
     "    tokens = [\n",
     "        word for word in word_tokenize(all_text.lower())\n",
     "        if re.match(r'^[a-z]{3,}$', word) and word not in combined_stopwords\n",
@@ -256,46 +328,6 @@
     "\n",
     "# Display UI and Output\n",
     "display(ui, out)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "82be7c1d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Choose influencer\n",
-    "influencer_name = \"amyflamy\"\n",
-    "\n",
-    "# Filter cleaned, spam-free comments from the selected influencer\n",
-    "influencer_comments = filtered_comments_df[filtered_comments_df[\"author_nickName\"] == influencer_name]\n",
-    "\n",
-    "# Combine all comments into a single string\n",
-    "all_text = \" \".join(influencer_comments[\"text_comment\"].dropna())\n",
-    "\n",
-    "# Tokenize and filter tokens using combined stopwords\n",
-    "tokens = [\n",
-    "    word for word in word_tokenize(all_text.lower())\n",
-    "    if re.match(r'^[a-z]{3,}$', word) and word not in combined_stopwords\n",
-    "]\n",
-    "\n",
-    "# Create bigrams and trigrams\n",
-    "bigrams = list(ngrams(tokens, 2))\n",
-    "trigrams = list(ngrams(tokens, 3))\n",
-    "\n",
-    "# Count most common ones\n",
-    "bigram_freq = Counter(bigrams).most_common(20)\n",
-    "trigram_freq = Counter(trigrams).most_common(20)\n",
-    "\n",
-    "# Display results\n",
-    "print(\"Top 20 Bigrams:\")\n",
-    "for bg in bigram_freq:\n",
-    "    print(\" \".join(bg[0]), \"-\", bg[1])\n",
-    "\n",
-    "print(\"\\nTop 20 Trigrams:\")\n",
-    "for tg in trigram_freq:\n",
-    "    print(\" \".join(tg[0]), \"-\", tg[1])"
    ]
   }
  ],
