--- a/notebooks/AdditionalStuff/influencer_performance.ipynb
+++ b/notebooks/AdditionalStuff/influencer_performance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "431e901f",
    "metadata": {},
    "outputs": [],
@@ -26,13 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "67661e1d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load and prepare data\n",
-    "df = pd.read_csv(\"../data/filtered_data/comments_posts_transcripts.csv\")\n",
+    "df = pd.read_csv(\"../../data/filtered_data/comments_posts_transcripts.csv\")\n",
     "\n",
     "# Remove posts with less than views\n",
     "df = df[df[\"playCount\"] > 50].copy()\n",
@@ -53,14 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "216a9231",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f40fb8eda03b400f8c35f1185a87ec31",
+       "model_id": "a9a54d7a13ad4b588819a2edddc3ff05",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "502d5dc8",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/5k/b8_r8jw502n4zztm42zd76m80000gn/T/ipykernel_27775/4199171522.py:26: SettingWithCopyWarning: \n",
+      "/var/folders/5k/b8_r8jw502n4zztm42zd76m80000gn/T/ipykernel_39761/4199171522.py:26: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "id": "c3004de0",
    "metadata": {},
    "outputs": [],
@@ -227,14 +227,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "id": "c27d3045",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9aa6cba406f420fb3979d9b478800ed",
+       "model_id": "3f74e07513754634a85f03890427db8e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -248,7 +248,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb681e00f9cc4fa1b915f9eb1e57f1aa",
+       "model_id": "f73f43254ee04d63ad1d69e8727e27f9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -333,7 +333,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "skincare-analysis-pFfgqJ8c-py3.10",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
